[gd_scene load_steps=133 format=2]

[ext_resource path="res://Assets/Code/Player0.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Player0/wall/Player0wall.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Player1B/spawn/player1spawn1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Player1B/spawn/player1spawn2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Player1B/spawn/player1spawn3.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Player1B/spawn/player1spawn4.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/Player1B/spawn/player1spawn5.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/Player1B/spawn/player1spawn6.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/Player1B/spawn/player1spawn7.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/Player1B/spawn/player1spawn8.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/Player1B/spawn/player1spawn9.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/Player1B/spawn/player1spawn10.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/Player1B/spawn/player1spawn11.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprites/Player1B/spawn/player1spawn12.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sprites/Player1B/spawn/player1spawn13.png" type="Texture" id=15]
[ext_resource path="res://Assets/Sprites/Player1B/spawn/player1spawn14.png" type="Texture" id=16]
[ext_resource path="res://Assets/Sprites/Player1B/spawn/player1spawn15.png" type="Texture" id=17]
[ext_resource path="res://Assets/Sprites/Player1B/spawn/player1spawn16.png" type="Texture" id=18]
[ext_resource path="res://Assets/Sprites/Player1B/spawn/player1spawn17.png" type="Texture" id=19]
[ext_resource path="res://Assets/Sprites/Player1B/spawn/player1spawn18.png" type="Texture" id=20]
[ext_resource path="res://Assets/Sprites/Player1B/spawn/player1spawn19.png" type="Texture" id=21]
[ext_resource path="res://Assets/Sprites/Player1B/spawn/player1spawn20.png" type="Texture" id=22]
[ext_resource path="res://Assets/Sprites/Player1B/spawn/player1spawn21.png" type="Texture" id=23]
[ext_resource path="res://Assets/Sprites/Player1B/jumpUp/Player1JU1.png" type="Texture" id=24]
[ext_resource path="res://Assets/Sprites/Player1B/jumpUp/Player1JU2.png" type="Texture" id=25]
[ext_resource path="res://Assets/Sprites/Player0/jumpUp/Player0JU1.png" type="Texture" id=26]
[ext_resource path="res://Assets/Sprites/Player0/jumpUp/Player0JU2.png" type="Texture" id=27]
[ext_resource path="res://Assets/Sprites/Player0/idle/Player0Idle1.png" type="Texture" id=28]
[ext_resource path="res://Assets/Sprites/Player0/idle/Player0Idle2.png" type="Texture" id=29]
[ext_resource path="res://Assets/Sprites/Player0/idle/Player0Idle3.png" type="Texture" id=30]
[ext_resource path="res://Assets/Sprites/Player0/idle/Player0Idle4.png" type="Texture" id=31]
[ext_resource path="res://Assets/Sprites/Player0/idle/Player0Idle5.png" type="Texture" id=32]
[ext_resource path="res://Assets/Sprites/Player0/jumpDown/Player0JD1.png" type="Texture" id=33]
[ext_resource path="res://Assets/Sprites/Player0/jumpDown/Player0JD2.png" type="Texture" id=34]
[ext_resource path="res://Assets/Sprites/Player1B/wall/Player1wall.png" type="Texture" id=35]
[ext_resource path="res://Assets/Sprites/Player1B/death/player1death1.png" type="Texture" id=36]
[ext_resource path="res://Assets/Sprites/Player1B/death/player1death2.png" type="Texture" id=37]
[ext_resource path="res://Assets/Sprites/Player1B/death/player1death3.png" type="Texture" id=38]
[ext_resource path="res://Assets/Sprites/Player1B/death/player1death4.png" type="Texture" id=39]
[ext_resource path="res://Assets/Sprites/Player1B/death/player1death5.png" type="Texture" id=40]
[ext_resource path="res://Assets/Sprites/Player1B/death/player1death6.png" type="Texture" id=41]
[ext_resource path="res://Assets/Sprites/Player1B/death/player1death7.png" type="Texture" id=42]
[ext_resource path="res://Assets/Sprites/Player1B/death/player1death8.png" type="Texture" id=43]
[ext_resource path="res://Assets/Sprites/Player1B/death/player1death9.png" type="Texture" id=44]
[ext_resource path="res://Assets/Sprites/Player1B/death/player1death10.png" type="Texture" id=45]
[ext_resource path="res://Assets/Sprites/Player1B/death/player1death11.png" type="Texture" id=46]
[ext_resource path="res://Assets/Sprites/Player1B/death/player1death12.png" type="Texture" id=47]
[ext_resource path="res://Assets/Sprites/Player1B/death/player1death13.png" type="Texture" id=48]
[ext_resource path="res://Assets/Sprites/Player1B/death/player1death14.png" type="Texture" id=49]
[ext_resource path="res://Assets/Sprites/Player1B/death/player1death15.png" type="Texture" id=50]
[ext_resource path="res://Assets/Sprites/Player1B/death/player1death16.png" type="Texture" id=51]
[ext_resource path="res://Assets/Sprites/Player1B/death/player1death17.png" type="Texture" id=52]
[ext_resource path="res://Assets/Sprites/Player1B/death/player1death18.png" type="Texture" id=53]
[ext_resource path="res://Assets/Sprites/Player1B/death/player1death19.png" type="Texture" id=54]
[ext_resource path="res://Assets/Sprites/Player1B/death/player1death20.png" type="Texture" id=55]
[ext_resource path="res://Assets/Sprites/Player1B/death/player1death21.png" type="Texture" id=56]
[ext_resource path="res://Assets/Sprites/Player1B/death/player1death22.png" type="Texture" id=57]
[ext_resource path="res://Assets/Sprites/Player1B/death/player1death23.png" type="Texture" id=58]
[ext_resource path="res://Assets/Sprites/Player1B/death/player1death24.png" type="Texture" id=59]
[ext_resource path="res://Assets/Sprites/Player1B/death/player1death25.png" type="Texture" id=60]
[ext_resource path="res://Assets/Sprites/Player1B/death/player1death26.png" type="Texture" id=61]
[ext_resource path="res://Assets/Sprites/Player1B/death/player1death27.png" type="Texture" id=62]
[ext_resource path="res://Assets/Sprites/Player1B/jumpDown/Player1JD1.png" type="Texture" id=63]
[ext_resource path="res://Assets/Sprites/Player1B/jumpDown/Player1JD2.png" type="Texture" id=64]
[ext_resource path="res://Assets/Sprites/Player1B/idle/Player1Idle1.png" type="Texture" id=65]
[ext_resource path="res://Assets/Sprites/Player1B/idle/Player1Idle2.png" type="Texture" id=66]
[ext_resource path="res://Assets/Sprites/Player1B/idle/Player1Idle3.png" type="Texture" id=67]
[ext_resource path="res://Assets/Sprites/Player1B/idle/Player1Idle4.png" type="Texture" id=68]
[ext_resource path="res://Assets/Sprites/Player1B/idle/Player1Idle5.png" type="Texture" id=69]
[ext_resource path="res://Assets/Sprites/Player0/death/player0death1.png" type="Texture" id=70]
[ext_resource path="res://Assets/Sprites/Player0/death/player0death2.png" type="Texture" id=71]
[ext_resource path="res://Assets/Sprites/Player0/death/player0death3.png" type="Texture" id=72]
[ext_resource path="res://Assets/Sprites/Player0/death/player0death4.png" type="Texture" id=73]
[ext_resource path="res://Assets/Sprites/Player0/death/player0death5.png" type="Texture" id=74]
[ext_resource path="res://Assets/Sprites/Player0/death/player0death6.png" type="Texture" id=75]
[ext_resource path="res://Assets/Sprites/Player0/death/player0death7.png" type="Texture" id=76]
[ext_resource path="res://Assets/Sprites/Player0/death/player0death8.png" type="Texture" id=77]
[ext_resource path="res://Assets/Sprites/Player0/death/player0death9.png" type="Texture" id=78]
[ext_resource path="res://Assets/Sprites/Player0/death/player0death10.png" type="Texture" id=79]
[ext_resource path="res://Assets/Sprites/Player0/death/player0death11.png" type="Texture" id=80]
[ext_resource path="res://Assets/Sprites/Player0/death/player0death12.png" type="Texture" id=81]
[ext_resource path="res://Assets/Sprites/Player0/death/player0death13.png" type="Texture" id=82]
[ext_resource path="res://Assets/Sprites/Player0/death/player0death14.png" type="Texture" id=83]
[ext_resource path="res://Assets/Sprites/Player0/death/player0death15.png" type="Texture" id=84]
[ext_resource path="res://Assets/Sprites/Player0/death/player0death16.png" type="Texture" id=85]
[ext_resource path="res://Assets/Sprites/Player0/death/player0death17.png" type="Texture" id=86]
[ext_resource path="res://Assets/Sprites/Player0/death/player0death18.png" type="Texture" id=87]
[ext_resource path="res://Assets/Sprites/Player0/death/player0death19.png" type="Texture" id=88]
[ext_resource path="res://Assets/Sprites/Player0/death/player0death20.png" type="Texture" id=89]
[ext_resource path="res://Assets/Sprites/Player0/death/player0death21.png" type="Texture" id=90]
[ext_resource path="res://Assets/Sprites/Player0/death/player0death22.png" type="Texture" id=91]
[ext_resource path="res://Assets/Sprites/Player0/death/player0death23.png" type="Texture" id=92]
[ext_resource path="res://Assets/Sprites/Player0/death/player0death24.png" type="Texture" id=93]
[ext_resource path="res://Assets/Sprites/Player0/death/player0death25.png" type="Texture" id=94]
[ext_resource path="res://Assets/Sprites/Player0/death/player0death26.png" type="Texture" id=95]
[ext_resource path="res://Assets/Sprites/Player0/death/player0death27.png" type="Texture" id=96]
[ext_resource path="res://Assets/Sprites/Player0/spawn/player0spawn1.png" type="Texture" id=97]
[ext_resource path="res://Assets/Sprites/Player0/spawn/player0spawn2.png" type="Texture" id=98]
[ext_resource path="res://Assets/Sprites/Player0/spawn/player0spawn3.png" type="Texture" id=99]
[ext_resource path="res://Assets/Sprites/Player0/spawn/player0spawn4.png" type="Texture" id=100]
[ext_resource path="res://Assets/Sprites/Player0/spawn/player0spawn5.png" type="Texture" id=101]
[ext_resource path="res://Assets/Sprites/Player0/spawn/player0spawn6.png" type="Texture" id=102]
[ext_resource path="res://Assets/Sprites/Player0/spawn/player0spawn7.png" type="Texture" id=103]
[ext_resource path="res://Assets/Sprites/Player0/spawn/player0spawn8.png" type="Texture" id=104]
[ext_resource path="res://Assets/Sprites/Player0/spawn/player0spawn9.png" type="Texture" id=105]
[ext_resource path="res://Assets/Sprites/Player0/spawn/player0spawn10.png" type="Texture" id=106]
[ext_resource path="res://Assets/Sprites/Player0/spawn/player0spawn11.png" type="Texture" id=107]
[ext_resource path="res://Assets/Sprites/Player0/spawn/player0spawn12.png" type="Texture" id=108]
[ext_resource path="res://Assets/Sprites/Player0/spawn/player0spawn13.png" type="Texture" id=109]
[ext_resource path="res://Assets/Sprites/Player0/spawn/player0spawn14.png" type="Texture" id=110]
[ext_resource path="res://Assets/Sprites/Player0/spawn/player0spawn15.png" type="Texture" id=111]
[ext_resource path="res://Assets/Sprites/Player0/spawn/player0spawn16.png" type="Texture" id=112]
[ext_resource path="res://Assets/Sprites/Player0/spawn/player0spawn17.png" type="Texture" id=113]
[ext_resource path="res://Assets/Sprites/Player0/spawn/player0spawn18.png" type="Texture" id=114]
[ext_resource path="res://Assets/Sprites/Player0/spawn/player0spawn19.png" type="Texture" id=115]
[ext_resource path="res://Assets/Sprites/Player0/spawn/player0spawn20.png" type="Texture" id=116]
[ext_resource path="res://Assets/Sprites/Player0/spawn/player0spawn21.png" type="Texture" id=117]
[ext_resource path="res://Assets/Sprites/Player0/run/Player0Run1.png" type="Texture" id=118]
[ext_resource path="res://Assets/Sprites/Player0/run/Player0Run2.png" type="Texture" id=119]
[ext_resource path="res://Assets/Sprites/Player0/run/Player0Run3.png" type="Texture" id=120]
[ext_resource path="res://Assets/Sprites/Player0/run/Player0Run4.png" type="Texture" id=121]
[ext_resource path="res://Assets/Sprites/Player1B/run/Player1Run1.png" type="Texture" id=122]
[ext_resource path="res://Assets/Sprites/Player1B/run/Player1Run2.png" type="Texture" id=123]
[ext_resource path="res://Assets/Sprites/Player1B/run/Player1Run3.png" type="Texture" id=124]
[ext_resource path="res://Assets/Sprites/Player1B/run/Player1Run4.png" type="Texture" id=125]
[ext_resource path="res://Assets/Audio/movement/jump.wav" type="AudioStream" id=126]
[ext_resource path="res://Assets/Audio/movement/wallslide.wav" type="AudioStream" id=127]
[ext_resource path="res://Assets/Audio/control/no.wav" type="AudioStream" id=128]
[ext_resource path="res://Assets/Audio/control/yes.wav" type="AudioStream" id=129]


[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "wall0",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ) ],
"loop": true,
"name": "spawn1",
"speed": 15.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 25 ) ],
"loop": true,
"name": "jumpUp1",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 27 ) ],
"loop": true,
"name": "jumpUp0",
"speed": 10.0
}, {
"frames": [ ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ) ],
"loop": true,
"name": "idle0",
"speed": 10.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 34 ) ],
"loop": true,
"name": "jumpDown0",
"speed": 5.0
}, {
"frames": [ ExtResource( 35 ) ],
"loop": true,
"name": "wall1",
"speed": 5.0
}, {
"frames": [ ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ) ],
"loop": true,
"name": "death1",
"speed": 15.0
}, {
"frames": [ ExtResource( 63 ), ExtResource( 64 ) ],
"loop": true,
"name": "jumpDown1",
"speed": 5.0
}, {
"frames": [ ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ) ],
"loop": true,
"name": "idle1",
"speed": 5.0
}, {
"frames": [ ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 80 ), ExtResource( 81 ), ExtResource( 82 ), ExtResource( 83 ), ExtResource( 84 ), ExtResource( 85 ), ExtResource( 86 ), ExtResource( 87 ), ExtResource( 88 ), ExtResource( 89 ), ExtResource( 90 ), ExtResource( 91 ), ExtResource( 92 ), ExtResource( 93 ), ExtResource( 94 ), ExtResource( 95 ), ExtResource( 96 ) ],
"loop": true,
"name": "death0",
"speed": 15.0
}, {
"frames": [ ExtResource( 97 ), ExtResource( 98 ), ExtResource( 99 ), ExtResource( 100 ), ExtResource( 101 ), ExtResource( 102 ), ExtResource( 103 ), ExtResource( 104 ), ExtResource( 105 ), ExtResource( 106 ), ExtResource( 107 ), ExtResource( 108 ), ExtResource( 109 ), ExtResource( 110 ), ExtResource( 111 ), ExtResource( 112 ), ExtResource( 113 ), ExtResource( 114 ), ExtResource( 115 ), ExtResource( 116 ), ExtResource( 117 ) ],
"loop": true,
"name": "spawn0",
"speed": 15.0
}, {
"frames": [ ExtResource( 118 ), ExtResource( 119 ), ExtResource( 120 ), ExtResource( 121 ) ],
"loop": true,
"name": "run0",
"speed": 16.0
}, {
"frames": [ ExtResource( 122 ), ExtResource( 123 ), ExtResource( 124 ), ExtResource( 125 ) ],
"loop": true,
"name": "run1",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
height = 12.0488

[sub_resource type="CircleShape2D" id=3]
radius = 16.2172

[node name="Player0" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "spawn0"
frame = 5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="GunPosition" type="Position2D" parent="."]
position = Vector2( -15, 4 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 3 )

[node name="AudioJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 126 )
volume_db = -8.722

[node name="AudioWallslide" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 127 )
volume_db = -13.001

[node name="AudioStep" type="AudioStreamPlayer" parent="."]

[node name="AudioDeath" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 128 )
volume_db = -10.0

[node name="AudioSpawn" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 129 )
volume_db = -10.0
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
